Details
-
Bug
-
Resolution: Fixed
-
Minor
Description
If MaxLength is equal to the length of the input buffer, then an error will be returned:
if (MaxLength >= Stack->Parameters.DeviceIoControl.InputBufferLength) |
{
|
return STATUS_INVALID_PARAMETER; |
}
|
Should be:
if (MaxLength > Stack->Parameters.DeviceIoControl.InputBufferLength) |
{
|
return STATUS_INVALID_PARAMETER; |
}
|