[MOUNTMGR] Fix buffer length checking

Found by Vadim Galiant.

CORE-15549